@@ -333,3 +333,4 @@ emoji,hexcode,group,subgroups,annotation,openmoji_tags,openmoji_author,openmoji_
 ,E0C9,extras-openmoji,food-drink,champignon white,"mushroom fungi",Liz Bravo,2021-05-04
 ,E0CA,extras-openmoji,food-drink,boule bread,"french bread, traditional bread, round bread",Alexander Müller,2021-05-08
 ,E1D8,extras-openmoji,technology,qr code,"scan, tag, matrix, barcode, quick response",Alexander Müller,2021-10-08
+,E1D9,extras-openmoji,technology,barcode,"scan, tag, machine readable, data",Alexander Müller,2021-10-20
