@@ -48387,7 +48387,7 @@
     "group": "objects",
     "subgroups": "musical-instrument",
     "annotation": "accordion",
-    "tags": "concertina, squeeze box",
+    "tags": "accordian, concertina, squeeze box",
     "openmoji_tags": "",
     "openmoji_author": "Liz Bravo",
     "openmoji_date": "2020-07-21",
@@ -64558,6 +64558,23 @@
     "openmoji_tags": "scan, tag, matrix, barcode, quick response",
     "openmoji_author": "Alexander Müller",
     "openmoji_date": "2021-10-08",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "",
+    "order": ""
+  },
+  {
+    "emoji": "",
+    "hexcode": "E1D9",
+    "group": "extras-openmoji",
+    "subgroups": "technology",
+    "annotation": "barcode",
+    "tags": "",
+    "openmoji_tags": "scan, tag, machine readable, data",
+    "openmoji_author": "Alexander Müller",
+    "openmoji_date": "2021-10-20",
     "skintone": "",
     "skintone_combination": "",
     "skintone_base_emoji": "",
