@@ -8,6 +8,7 @@ OpenMoji 14.0 - XX XXX 2021
 
 New:
   + E1D8 QR code OpenMoji by @loominade (try it on your mobile) #347
+  + E1D9 barcode OpenMoji by @loominade
 
 
 --------------------------------------------------------------------------------
